image problem sloved

--- a/views/CHILD.ejs
+++ b/views/CHILD.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>CHILD RELATED CRIME</title>
-<link rel="stylesheet" type="text/css" href="../libs/child.css">
+<link rel="stylesheet" type="text/css" href="../stylesheets/child.css">
 <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
 </head>
 <body>
