--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -7,7 +7,7 @@ html{
 	background-color:#38bdc9;	
 }
 .fake{
-	margin-left:110px;
+	margin-left:60px;
 
 }
 </style>
@@ -16,7 +16,7 @@ html{
 <div style="height:200px">
 <div>
 <h1><b><marquee>***<font color="light blue">CONTACT THESE FOR FURTHER  INFORMATION***</marquee></b></h1>
-<img src="contact us.png" class="fake" >
+<img src="../images/contact us.png" class="fake" >
 </div>
 </body>
 </head>
