--- a/views/crimeportal.ejs
+++ b/views/crimeportal.ejs
@@ -1,12 +1,12 @@
 <html>
   <head>
     <title>CRIME PORTAL</title>
-  <link rel="stylesheet" type="text/css" href="../libs/crimeportal.css">
+  <link rel="stylesheet" type="text/css" href="../stylesheets/crimeportal.css">
   <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
   <body>
 
     <div class="header" id="new">
-      <h1>...::CRIME PORTAL::...</h1>
+      <h1><img src="../images/logo.png" id="logo">...::CRIME PORTAL::...</h1>
       <p></p>
     </div>
     
@@ -23,7 +23,7 @@
       <div class="side">
         <h2>ABOUT US.</h2>
         <h5>PHOTOS OF CRIME:</h5>
-        <img src="reportcybercrime.jpg"style="height:300px;">
+        <img src="../images/reportcybercrime.jpg"style="height:300px;">
         <p><b>A crime (or misdemeanor or felony) is an act done by a person which is against the laws of a country or region. A person who does this is called a criminal.
     
     The basic idea of what things are called "crimes" is that they are thought to be things that might cause a problem for another person. Things like killing another person, injuring another person, or stealing from another person are crimes in most countries. Also, it can be a crime to have or sell contraband such as guns or illegal drugs.
@@ -44,9 +44,9 @@
       <p class="footer-links">
               <a href="#">Home</a>
               |
-              <a href="#Blog">Blog</a>
+              <a href="/Blog">Blog</a>
               |
-              <a href="#About">About</a>
+              <a href="/About">About</a>
               |
               <a href="/contactus">Contact</a>
             </p>
