--- a/views/cyber.ejs
+++ b/views/cyber.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>CYBER CRIME</title>
-<link rel="stylesheet" type="text/css" href="../libs/loginstyle.css">
+<link rel="stylesheet" type="text/css" href="../stylesheets/loginstyle.css">
 <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
   
   There are many privacy concerns surrounding cybercrime when confidential information is intercepted or disclosed, lawfully or otherwise. Debarati Halder and K. Jaishankar further define cybercrime from the perspective of gender and defined 'cybercrime against women' as "Crimes targeted against women with a motive to intentionally harm the victim psychologically and physically, using modern telecommunication networks such as internet and mobile phones".[3] Internationally, both governmental and non-state actors engage in cybercrimes, including espionage, financial theft, and other cross-border crimes. Cybercrimes crossing international borders and involving the actions of at least one nation-state is sometimes referred to as cyberwarfare.
     </p></h4>
-    <img src="cy.jfif" class="fake";>
+    <img src="../images/cy.jfif" class="fake";>
   <h2 style="color:black">CLICK BELOW TO REGISTER YOUR COMPLAINT</h2>
        <a href="/form">REGISTER YOUR COMPLAINT.</a>
     
