--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>COMPLAINT REGISTRATION FORM.</title>
-<link rel="stylesheet" type="text/css" href="../libs/form.css">
+<link rel="stylesheet" type="text/css" href="../stylesheets/form.css">
 <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
 </head>
 <body>
