--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <head>
   <title>LOGIN</title>
-  <link rel="stylesheet" type="text/css" href="../libs/loginstyle.css">
+  <link rel="stylesheet" type="text/css" href="../stylesheets/loginstyle.css">
   <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
 
 </head>
@@ -12,7 +12,7 @@
   <%- include('partials/messages') -%>
   <form action="/login" method="POST">
     <div class="imgcontainer">
-      <img src="login image.jpg" alt="Avatar" class="avatar">
+      <img src="../images/login image.jpg" alt="Avatar" class="avatar">
     </div>
 
     <div class="container">
