--- a/views/website.ejs
+++ b/views/website.ejs
@@ -1,18 +1,18 @@
 <html>
 <head>
 <title>WEB PORTAL</title>
-<link rel="stylesheet" type="text/css" href="../libs/website.css">
+<link rel="stylesheet" type="text/css" href="../stylesheets/website.css">
 <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
 </head>
 <body>
 <div class="header" id="new">
-  <h1><img src="logo.png" id="logo">..::WEB PORTAL FOR CRIME::..</h1></div>
+  <h1><img src="../images/logo.png" id="logo">..::WEB PORTAL FOR CRIME::..</h1></div>
  <h2 style="text-align: center;color:solid black">A <b>GOVT</b> OF <i>INDIA</i> INITIATIVE.</h2>
 </div>
   
 <div class="navbar">
   <a href="#HOME" class="active">Home</a>
-  <b>Pls signup/login for Futher Exploring the Website</b>
+  <b style="color:rgb(222, 233, 243);">Pls signup/login for Futher Exploring the Website</b>
   <a href="/login" class="right">login</a>
   <a href="/signup" class="right">signup</a>
 </div>
@@ -34,7 +34,7 @@
      <h5>Title description, jan 28, 2020</h5>
     <div class="fakeimg" style="height: 10px;">
     </div>
-    <img src="crime.jpg">
+    <img src="../images/crime.jpg">
     <p><h3><i>The mission of the Internet Crime Complaint Center, also known as IC3, is to provide the public with a reliable and convenient reporting mechanism to submit information to the Federal Bureau of Investigation (FBI) concerning suspected Internet-facilitated criminal activity and to develop alliances with law enforcement and industry partners. Information is analyzed and disseminated for investigative and intelligence purposes to law enforcement and for public awareness.</i></h3></p>
     <br>
   </div>
