--- a/views/womenrelatedcrime.ejs
+++ b/views/womenrelatedcrime.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>WOMEN RELATED CRIME</title>
-<link rel="stylesheet" type="text/css" href="../libs/womencrime.css">
+<link rel="stylesheet" type="text/css" href="../stylesheets/womencrime.css">
   <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
 </head>
 <body>
@@ -17,7 +17,7 @@ This is a surprising insight since the popular media is rife with news of rapes,
 The hype in the media compels us to believe that rapes are on a dramatic rise. However, the data reveals that rapes have more or less followed a flat trend.
 
 This raises a lot of questions - if the number of rapes was always the same (or this high), why all the sudden media attention? Where was the media in earlier years? Could the data hiding the truth for the last few years?. There could be any one or more of multiple possible explanations.</p></h3>
-<img src="cyber.jfif" class="fake";>
+<img src="../images/cyber.jfif" class="fake";>
 <h2 style="color:black">CLICK BELOW TO REGISTER YOUR COMPLAINT</h2>
      <a href="/form">REGISTER YOUR COMPLAINT.</a>
   
