completed all function

--- a/public/stylesheets/crimeportal.css
+++ b/public/stylesheets/crimeportal.css
@@ -40,11 +40,11 @@ body {
 
 /* Style the navigation bar links */
 .navbar a {
-  float: left;
+ /* float: left; */
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 20px;
+  padding: 12px 18px;
   text-decoration: none;
 }
 
