--- a/views/crimeportal.ejs
+++ b/views/crimeportal.ejs
@@ -15,9 +15,10 @@
       <a href="/womenrelatedcrime" target="_blank">WOMEN RELATED CRIME</a>
       <a href="/CHILD" target="_blank">CHILD RELATED CRIME</a>
       <a href="/cyber" target="_blank">CYBER CRIME</a>
-      <a href="/contactus" target="_blank" class="right">CONTACT US</a>
+      <a href="/contactus" target="_blank" class="right">CONTACTUS</a>
       <a class="nav-link text-white" href="#"><%= currentUser.firstname +" "+ currentUser.lastname %></b></a>
-      <a href="/password/change" class="x">CHANGE PASSWORD</a>
+      <a href="/report">VIEW REPORT</a>
+      <a href="/password/change">CHANGE PASSWORD</a>
       <a href="/logout" class="x">LOGOUT</a>
       <% } %>
     </div>
