--- a/views/cyber.ejs
+++ b/views/cyber.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>CYBER CRIME</title>
-<link rel="stylesheet" type="text/css" href="../stylesheets/loginstyle.css">
+<link rel="stylesheet" type="text/css" href="../stylesheets/cyber.css">
 <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
 </head>
 <body>
