--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Your Password" name="password" required>
 
-      <a class="float-right mt-0 mb-3 text-danger" href="#">Forgot Password?</a>
+      <a class="float-right mt-0 mb-3 text-danger" href="/forgot">Forgot Password?</a>
       <button type="submit" class="btn btn-danger btn-block">Login</button>
 
       <label>
@@ -38,3 +38,4 @@
 
   </form>
 </body>
+</html>
