--- a/views/newpassword.ejs
+++ b/views/newpassword.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>changepassword</title>
+  <title>newpassword</title>
   <link rel="stylesheet" type="text/css" href="../stylesheets/crimeportal.css">
   <link rel="stylesheet" type="text/css" href="../libs/bootstrap.css">
 </head>
@@ -16,14 +16,13 @@
     <a href="/CHILD" target="_blank">CHILD RELATED CRIME</a>
     <a href="/cyber" target="_blank">CYBER CRIME</a>
     <a href="/contactus" target="_blank" class="right">CONTACT US</a>
-    <a class="nav-link text-white" href="#"><%= currentUser.firstname +" "+ currentUser.lastname %></b></a>
     <a href="#" class="x">CHANGE PASSWORD</a>
     <a href="/logout" class="x">LOGOUT</a>
   </div>
 <h1 class="text-center mt-5 mb-3">Change Password</h1>
 <div class="container w-25">
 <%- include('partials/messages') -%>
-<form action="/password/change" method="POST">
+<form action="/reset/<%=token%>" method="POST">
 
     <div class="form-group px-0">
         <input type="password" name="password" class="form-control" placeholder="Password">
@@ -34,9 +33,6 @@
     </div>
 
     <button type="submit" class="btn btn-danger btn-block">Change Password</button>
-</form>
-<form action="/crimeportal" method="GET">
-  <button type="text" class="btn btn-success btn-block">Home</button>
 </form>
 </div>
 
